<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FADB3C">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/name"
            android:layout_marginLeft="25dp"/>

        <TextView
            android:id="@+id/nameSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sample"
             android:layout_toRightOf="@+id/name"
            android:layout_marginLeft="25dp"/>
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mobile_number"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/name"/>

    <TextView
        android:id="@+id/mobileSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sample"
        android:layout_toRightOf="@+id/number"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/name"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_address"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/number"/>

    <TextView
        android:id="@+id/emailSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sample"
        android:layout_toRightOf="@+id/email"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="Languages : "
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/languages" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:text="sample"
        android:layout_below="@+id/languages"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"/>


</RelativeLayout>